--- a/css/style.css
+++ b/css/style.css
@@ -92,8 +92,17 @@ section {
 	width: 100%;
 	height: 100%;
 	z-index: 99999;
-	background: #FFF url(../img/page-loader.gif) center center no-repeat;
+	background-color: #FFF;
+	color: #000;
 }
+.page-loader i {
+  position: relative;
+  left: 50%;
+  top: 50%;
+  margin-left: -35px;
+  margin-top: -35px;
+}
+
 .thumbnail {
 	padding: 15px;
 	margin-bottom: 20px;
@@ -744,8 +753,7 @@ ul.contact-address li a {
 	text-transform: uppercase;
 }
 p.subtitle {
-	letter-spacing: 2px;
-	margin-top: 10px;
+	margin-top: 1em;
 }
 /* ===== End page header ===== */
 
